--- a/static/styles.css
+++ b/static/styles.css
@@ -10696,7 +10696,7 @@ img.center {
 
 .main-container {
   display: flex;
-  margin-left: calc(28% + 15px);
+  margin-left: calc(28% + 25px);
 }
 
 .slider-container {
